syntax = "proto3";

package org.orleans.silo;

service ActivateGrainService{
    rpc ActivateGrain (ActivateRequest) returns (ActivationSuccess) {}
}

message ActivateRequest{
    string name = 1;
}

message ActivationSuccess{
    bool success = 1;
}
